--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URL = "mongodb+srv://mzngolu:vl77JQnCMz8HNS2D@cluster0.xfexabg.mongodb.net/CloudBook?retryWrites=true&w=majority"
+JWT_PVT_KEY = "PrabhatIsGoingToBeBestDeveloper%%"
